tests/specs/ecosystem/clappcodes/transporter/0_2_4.test
clappcodes/transporter/0.2.4
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/readable/from-event.ts:11:41

error: Type checking failed.

